# slurm-usage

./: .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  README.md  config.example.yaml  pyproject.toml  setup.py  slurm-usage.py  slurm_usage.py
.github/workflows/: pytest-uv.yml  update-readme.yml
tests/: __init__.py  anonymize_snapshots.py  capture_snapshots.py  conftest.py  test_advanced_features.py  test_cli_commands.py  test_collection.py  test_config_data_dir.py  test_data_processing.py  test_future_compatibility.py  test_node_usage.py  test_slurm_commands.py  test_slurm_usage.py  test_visualization.py
tests/snapshots/: command_map.json  metadata.json  sacct_day_0_output.txt  sacct_day_1_output.txt  sacct_day_2_output.txt  sacct_day_3_output.txt  sacct_day_4_output.txt  sacct_day_5_output.txt  sacct_day_6_output.txt  sacct_day_7_output.txt  sacct_version_output.txt  scontrol_node_0_name.txt  scontrol_node_0_output.txt  scontrol_node_1_name.txt  scontrol_node_1_output.txt  sinfo_cpus_output.txt  sinfo_gpus_output.txt  squeue_output.txt
tests/snippets/: config_example.yaml  polars_example.py
